--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -316,10 +316,13 @@ config CMD_FDT
 
 config CMD_CAPE
 	bool "Cape management commands"
-	default y
-	depends on CMD_FDT && HAS_CAPE_SCAN
+	select CMD_FDT
+	depends on SUPPORT_CAPE_SCAN
 	help
 	  Manage cape setup before booting the Operating System.
+
+config SUPPORT_CAPE_SCAN
+	bool
 
 config CMD_GO
 	bool "go"
