--- a/arch/arm/dts/sun5i-r8-chip.dts
+++ b/arch/arm/dts/sun5i-r8-chip.dts
@@ -89,6 +89,12 @@
 		gpios = <&pio 3 2 GPIO_ACTIVE_HIGH>; /* PD2 */
 		pinctrl-names = "default";
 		pinctrl-0 = <&chip_w1_pin>;
+
+		w1_eeprom: w1_eeprom@0 {
+			compatible = "maxim,ds2431";
+			status = "okay";
+		};
+
 	};
 };
 
