--- a/arch/arm/mach-sunxi/Kconfig
+++ b/arch/arm/mach-sunxi/Kconfig
@@ -1,5 +1,17 @@
 if ARCH_SUNXI
 
+choice
+	prompt "Sunxi board select"
+	optional
+
+config TARGET_CHIP
+	bool "CHIP board"
+	select SUPPORT_CAPE_SCAN
+	imply CMD_CAPE
+
+endchoice
+
+
 config SPL_LDSCRIPT
 	default "arch/arm/cpu/armv7/sunxi/u-boot-spl.lds" if !ARM64
 
