--- a/arch/arm/mach-sunxi/Kconfig
+++ b/arch/arm/mach-sunxi/Kconfig
@@ -7,6 +7,10 @@ choice
 config TARGET_CHIP
 	bool "CHIP board"
 	select SUPPORT_CAPE_SCAN
+	select W1
+	select W1_GPIO
+	select W1_EEPROM
+	select W1_EEPROM_DS24XXX
 	imply CMD_CAPE
 
 endchoice
