sun5i: add support for DIP detection to CHIP board
Add the extension_board_scan specific function to scan the information
of the EEPROM on one-wire and fill the extension struct.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/arch/arm/mach-sunxi/Kconfig
+++ b/arch/arm/mach-sunxi/Kconfig
@@ -6,10 +6,12 @@ choice
 
 config TARGET_CHIP
 	bool "CHIP board"
+	select SUPPORT_EXTENSION_SCAN
 	select W1
 	select W1_GPIO
 	select W1_EEPROM
 	select W1_EEPROM_DS24XXX
+	imply CMD_EXTENSION
 
 endchoice
 
