--- a/arch/arm/mach-sunxi/Kconfig
+++ b/arch/arm/mach-sunxi/Kconfig
@@ -1,5 +1,19 @@
 if ARCH_SUNXI
 
+choice
+	prompt "Sunxi board select"
+	optional
+
+config TARGET_CHIP
+	bool "CHIP board"
+	select W1
+	select W1_GPIO
+	select W1_EEPROM
+	select W1_EEPROM_DS24XXX
+
+endchoice
+
+
 config SPL_LDSCRIPT
 	default "arch/arm/cpu/armv7/sunxi/u-boot-spl.lds" if !ARM64
 
